--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,20 @@
 <div class="container">
   <div class="row pt-5">
-    <div class="col-12">
+    <div class="col-6">
       <div class="form-floating mb-3">
-        <input type="text" class="form-control" id="floatingInput" placeholder="Search here..." name="search" (keyup.enter)="onSearch($event)">
-        <label for="floatingInput">Search and press enter</label>
+        <input type="text" class="form-control" id="search" placeholder="Search here..." name="search" (keyup.enter)="onSearch($event)">
+        <label for="search">Search and press enter</label>
       </div>
     </div>
+    <div class="col-6">
+      <div class="form-floating mb-3">
+        <input type="text" class="form-control" id="filter" placeholder="Filter here..." name="filter" (keyup.enter)="onFilter($event)">
+        <label for="filter">Filter and press enter</label>
+      </div>
+    </div>    
   </div>
   <div class="row pt-5">
-    <div class="col-3" *ngFor="let movie of movies | movieSearch:search">      
+    <div class="col-3" *ngFor="let movie of movies | movieFilter:filter">
       <div class="card" style="width: 18rem;">
         <img [src]="movie.Poster" class="card-img-top" [alt]="movie.Title">
         <div class="card-body">
