--- a/src/app/shared/components/loading/loading.component.html
+++ b/src/app/shared/components/loading/loading.component.html
@@ -1,3 +1,3 @@
 <div *ngIf="loadingService.loading$ | async">
-    <p style="font-size: xx-large;">loading works!</p>
+    <app-spinner></app-spinner>
 </div>
