--- a/src/app/shared/components/loading/loading.component.html
+++ b/src/app/shared/components/loading/loading.component.html
@@ -1,3 +1,3 @@
-<div *ngIf="loadingService.loading$ | async">
+<div class="text-center" *ngIf="loadingService.loading$ | async">
     <app-spinner></app-spinner>
 </div>
